# Projet_Spe

./: .gitignore  CMakeLists.txt  Makefile  rules.mk
doc/: liens.txt
scilab/: code_ref.sce  e.plot
shaders/colormap/: draw_fs.glsl  draw_vs.glsl
src/: computeThread.hpp  grid.cpp  grid.hpp  main.c  main.cpp  main2.cpp  main3.cpp  main4.cpp
src/colormap/: colormap.cpp  colormap.hpp
src/deprecated/qtgui/: mainWindow.moc  sidePanel.moc  voxelViewer.moc
src/domain/: domain.tpp  subDomain.tpp
src/grid/: grid.hpp  grid.tpp  grid1D.hpp  grid1D.tpp  grid2D.hpp  grid2D.tpp  grid3D.hpp  grid3D.tpp
src/kernels/: basicSystem.cl  demo.cl  multigpu.cl
src/models/: argument.cpp  argument.hpp  circleInitialCond.hpp  domain.cpp  domain.hpp  exampleModel.cpp  exampleModel.hpp  initialCond.tpp  model.cpp  model.hpp  multigpu.cpp  multigpu.hpp  simpleModel2D.cpp  simpleModel2D.hpp  subDomain.cpp  subDomain.hpp  value.hpp
src/models/exampleModel/: exampleModel.cpp  exampleModel.hpp
src/models/initialCond/: functionInitialCond.hpp  initialCond.hpp  initialCond.tpp  initialCondFactory.cpp  initialCondFactory.hpp  lineNumberArea.hpp  pythonCodeInitialCond.hpp  pythonFuncInitialCond.hpp  pythonInitialCond.hpp
src/models/multigpu/: deviceThread.hpp  deviceThread.tpp  domain.cpp  domain.hpp  domain.tpp  fence.cpp  fence.hpp  multigpu.cpp  multigpu.hpp  subDomain.hpp  subDomain.tpp
src/models/simpleModel2D/: simpleModel2D.hpp
src/qt/: graphicsViewer.cpp  graphicsViewer.hpp  initializationDialog.cpp  initializationDialog.hpp  mainWindow.cpp  mainWindow.hpp  menuBar.cpp  menuBar.hpp  openGLScene.cpp  openGLScene.hpp  parametersDialog.cpp  parametersDialog.hpp  sidePanel.cpp  sidePanel.hpp  statusBar.cpp  statusBar.hpp
src/qt/codeEditor/: codeEditor.cpp  codeEditor.hpp  codeEditorGui.cpp  codeEditorGui.hpp
src/solver/: functor.hpp  solver.hpp  solver.tpp  system.hpp  system.tpp
src/solver/systems/: simpleSystem.hpp  simpleSystem.tpp  simpleSystem2D.hpp  simpleSystem2D.tpp
src/solveur/: functor.hpp
src/test/: gridTest.cpp  valueTest.cpp
src/thread/: computeThread.cpp  computeThread.hpp
src/utils/: defines.hpp  globals.cpp  globals.hpp  headers.hpp  plotUtils.cpp  utils.cpp  utils.hpp
src/utils/logs/: log.cpp
src/utils/opencl/: clUtils.cpp  clUtils.hpp  cl_1_1.hpp  errorCodes.cpp  errorCodes.hpp
src/utils/opengl/: glUtils.cpp  glUtils.hpp  parameter.cpp  parameter.hpp
src/utils/opengl/program/: program.cpp  program.hpp
src/utils/opengl/shader/: shader.cpp  shader.hpp
src/utils/opengl/texture/: cubeMap.cpp  cubeMap.hpp  texture.cpp  texture.hpp  texture2D.cpp  texture2D.hpp  texture3D.cpp  texture3D.hpp
src/utils/plot/: plotUtils.cpp  plotUtils.hpp
test/: gridTest.cpp
